update notification logic
